<resources>
    <string name="app_name">软装到家J</string>
    <string name="str_tj">添加</string>
    <string name="str_tcdqkf">退出当前客户</string>
    <string name="str_sy">首页</string>
    <string name="str_hint">Hi!,张三三</string>
    <string name="str_fazs">方案展示</string>
    <string name="str_ppzs">品牌展示</string>
    <string name="str_spzs">商品展示</string>
    <string name="str_zsjs">找设计师</string>
    <string name="str_dk">打开</string>
    <string name="str_gb">关闭</string>
    <string name="str_pp">品牌</string>
    <string name="str_fa">方案</string>
    <string name="str_grzx">我的</string>
    <string name="str_zayc">再按一次回到桌面</string>
    <string name="str_fl">分类：</string>
    <string name="str_fl2">分类</string>
    <string name="str_spqd">商品清单</string>
    <string name="str_faqx">方案详情</string>
    <string name="str_zwkjxx">当前空间信息</string>
    <string name="str_hx">户型</string>
    <string name="str_mj">面积：</string>
    <string name="str_sjsj">设计时间：</string>
    <string name="str_sjsxm">设计师姓名：</string>
    <string name="str_fazj">方案总价：</string>
    <string name="str_ckgd">查看更多</string>
    <string name="str_3dyl">3D预览</string>
    <string name="str_ppqx">品牌详情</string>
    <string name="str_gd">更多</string>
    <string name="str_ppjj">品牌家具</string>
    <string name="str_rzjj">软装家具</string>
    <string name="str_gxsh">个性生活</string>
    <string name="str_tcdl">退出登录</string>
    <string name="str_tjkh">添加客户</string>
    <string name="str_wdkh">我的客户</string>
    <string name="str_qsrmx">请输入姓名</string>
    <string name="str_qsrsjh">请输入手机号</string>
    <string name="str_yhxy">用户协议</string>
    <string name="str_zh">账号：</string>
    <string name="str_qsrzh">请输入账号</string>
    <string name="str_qsrmm">请输入密码</string>
    <string name="str_mm">密码：</string>
    <string name="str_dl">登录</string>
    <string name="str_ywy">业务员</string>
    <string name="str_jxtj">继续添加</string>
    <string name="str_lywj">录音文件</string>
    <string name="str_xm">姓名</string>
    <string name="str_sjh">手机号</string>
    <string name="str_cz">操作</string>
    <string name="str_ss">搜索</string>
    <string name="str_xm2">姓名：</string>
    <string name="str_sjh2">手机号：</string>
    <string name="str_id">ID：</string>
    <string name="str_lywd">录音文档</string>
    <string name="str_lysj">录音时间</string>
    <string name="str_lysc">录音时长</string>
    <string name="str_sl">数量：</string>
    <string name="str_hint1">不好意思，该方案无商品展示哦！</string>
    <string name="str_bktj">爆款推荐</string>
    <string name="str_gg">规格：</string>
    <string name="str_hint2">您确认退出登录吗？</string>
    <string name="str_qd2">确定</string>
    <string name="str_qx">取消</string>
    <string name="str_tjcg">添加成功</string>
    <string name="str_qsrzqdsjhm">请输入正确的手机号码</string>
    <string name="str_dqkh">当前客户：</string>
    <string name="str_hint3">请去首页退出当前客户再继续添加</string>
    <string name="str_hint4">确定继续添加客户吗？</string>
    <string name="str_hint5">您确定退出当前客户吗？</string>
    <string name="str_tccg">退出成功</string>
    <string name="str_sqsb">授权失败，不能使用应用，请重新授权</string>
    <string name="str_hi">Hi！</string>
    <string name="str_ztyz">展厅游走</string>
    <string name="str_tzbf">停止播放</string>
    <string name="str_hint6">无法退出登录，请先退出当前客户</string>
    <string name="str_zxbb">最新版本：</string>
    <string name="str_shgx">稍后升级</string>
    <string name="str_ljgx">立即更新</string>
    <string name="str_az">安装</string>
    <string name="str_wdfa">我的方案</string>
    <string name="str_bkzq">爆款专区</string>
    <string name="str_sjs">设计师：</string>
    <string name="str_scfg">擅长风格：</string>
    <string name="str_wz">位置：</string>
    <string name="str_xx">详细：</string>
    <string name="str_lbrz">拎包入住</string>
    <string name="str_qxzhx">请选择户型</string>
    <string name="str_bj">布局</string>
    <string name="str_bj2">编辑</string>
    <string name="str_tjjj">添加家具</string>
    <string name="str_hint7">请输入编码或产品名</string>
    <string name="str_sx">筛选</string>
    <string name="str_zrm">最火</string>
    <string name="str_gg2">价格</string>
    <string name="str_zx">最新</string>
    <string name="str_fx">分享</string>
    <string name="str_yjjrgwc">一键加入购物车</string>
    <string name="str_ys">颜色：</string>
    <string name="str_jrpzd">加入配置单</string>
    <string name="str_fjbj">房间布局</string>
    <string name="str_qsrfjbj">请输入房间布局</string>
    <string name="str_hint8">您输入的房间布局有重复！</string>
    <string name="str_cz2">重置</string>
    <string name="str_hint9">长按可删除标签哦！</string>
    <string name="str_fg">风格</string>
    <string name="str_jg">价格</string>
    <string name="str_czcg">重置成功</string>
    <string name="str_hint10">请选择规格和颜色</string>
    <string name="str_zwzw">&#8195;</string>
    <string name="str_qsmfx">请扫码分享</string>
    <string name="str_qsrfamc">请输入方案名称</string>
    <string name="str_qsrxymj">请输入选用面积（㎡）</string>
    <string name="str_zwsp">暂无商品</string>
    <string name="str_hint11">暂无商品</string>
    <string name="str_hint12">该布局内无推荐家具，请自行选购商品！</string>
    <string name="str_ppm">品牌名</string>
    <string name="qb">全部</string>
    <string name="str_spm">商品名</string>
    <string name="str_fam">方案名</string>
    <string name="str_qb">全部</string>
    <string name="str_tjfl">添加分类</string>
    <string name="str_hint13">已添加到您的购物车\n详情请到欧工平台查看</string>
    <string name="str_hint14">该布局有商品，是否确认删除</string>
    <string name="str_qr">确认</string>
    <string name="str_hint15">该分类有家具，是否确认取消选中</string>
    <string name="str_dlcg">登录成功</string>
    <string name="str_scsp">收藏商品</string>
    <string name="str_scsp2">收藏\n商品</string>
    <string name="str_qxsc">取消\n收藏</string>
    <string name="str_wdsc">我的收藏</string>
    <string name="str_spsc">商品收藏</string>
    <string name="str_wc">完成</string>
    <string name="str_qx2">全选</string>
    <string name="str_sc">删除</string>
    <string name="str_sccg">收藏成功</string>
    <string name="str_qxsccg">取消收藏成功</string>
    <string name="str_sccg2">删除成功</string>
    <string name="str_zdj">最低价</string>
    <string name="str_zgj">最高价</string>
    <string name="str_share">分享</string>
    <string name="str_sc2">收藏</string>
    <string name="str_scpxx">商品信息</string>
    <string name="str_spxq">商品详情</string>
    <string name="str_qxsc2">取消收藏</string>
    <string name="str_czmm2">重置密码</string>
    <string name="str_hbdp">火爆单品</string>
    <string name="str_jdal">品牌展示</string>
    <string name="str_qjalty">方案展示</string>
    <string name="str_sp">商品</string>
    <string name="str_wd">我的</string>
    <string name="str_screen">筛选</string>
</resources>
