<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="@dimen/d10"
            android:background="@mipmap/ic_voice_bg"
            android:gravity="center|left"
            android:orientation="vertical"
            android:paddingLeft="@dimen/d30">


            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/str_id"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/d5"
                android:text="@string/str_xm2"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/d5"
                android:layout_toRightOf="@+id/iv_head"
                android:text="@string/str_sjh2"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@color/color_f4f4f4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/d10"
                android:paddingTop="10dp"
                android:text="@string/str_lywj"
                android:textColor="@color/color_333333"
                android:textSize="14dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/d10"
                android:paddingTop="10dp"
                android:text="@string/str_lywd"
                android:textColor="@color/color_333333"
                android:textSize="14dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/d10"
                android:paddingTop="10dp"
                android:text="@string/str_lysj"
                android:textColor="@color/color_333333"
                android:textSize="14dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/d10"
                android:paddingTop="10dp"
                android:text="@string/str_lysc"
                android:textColor="@color/color_333333"
                android:textSize="14dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/d10"
                android:paddingTop="10dp"
                android:textColor="@color/color_333333"
                android:textSize="14dp" />


        </LinearLayout>

    </LinearLayout>
</layout>
