<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/ll_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_heightPercent="70%h"
            app:layout_widthPercent="50%w">

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/color_c73c3a"
                    android:gravity="center"
                    app:layout_heightPercent="40%h">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_rzdj2" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="25dp"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_user"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/str_zh"
                        android:textColor="@color/color_666666"
                        android:textSize="15dp" />
                    <com.junshan.pub.widget.ClearEditText
                        android:id="@+id/et_name"
                        android:layout_toRightOf="@id/tv_user"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/shape_bg9"
                        android:hint="@string/str_qsrzh"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/color_333333"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/tv_pass"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/str_mm"
                        android:textColor="@color/color_666666"
                        android:textSize="15dp" />

                    <com.junshan.pub.widget.ClearEditText
                        android:id="@+id/et_passwd"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@id/tv_pass"
                        android:background="@drawable/shape_bg9"
                        android:hint="@string/str_qsrmm"
                        android:inputType="textPassword"
                        android:maxLength="25"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/color_333333"
                        android:textSize="15dp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/str_yhxy"
                    android:textColor="@color/color_c73c3a"
                    android:textSize="12dp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/shape_bg11"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/str_dl"
                    android:textColor="@color/white"
                    android:textSize="18dp" />
            </com.zhy.android.percent.support.PercentLinearLayout>
        </android.support.v7.widget.CardView>
    </com.zhy.android.percent.support.PercentLinearLayout>
</layout>